# GDPRShiftLeftMCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
scripts/: build_gdpr_data.py
src/gdpr_shift_left_mcp/: __init__.py  __main__.py  data_loader.py  disclaimer.py  server.py
src/gdpr_shift_left_mcp/data/: gdpr_bundled.json  risk_patterns.json
src/gdpr_shift_left_mcp/prompts/: __init__.py  azure_privacy_review.txt  compliance_roadmap.txt  cross_border_transfers.txt  data_mapping.txt  dpia_assessment.txt  gap_analysis.txt  incident_response.txt  vendor_assessment.txt
src/gdpr_shift_left_mcp/templates/: __init__.py  gdpr_aks.bicep  gdpr_api_management.bicep  gdpr_app_service.bicep  gdpr_azure_policy.bicep  gdpr_confidential_ledger.bicep  gdpr_confidential_vm.bicep  gdpr_container_apps.bicep  gdpr_cosmosdb.bicep  gdpr_defender_for_cloud.bicep  gdpr_entra_id.bicep  gdpr_front_door_waf.bicep  gdpr_keyvault.bicep  gdpr_log_analytics.bicep  gdpr_monitor_alerts.bicep  gdpr_postgresql.bicep  gdpr_service_bus.bicep  gdpr_sql.bicep  gdpr_storage.bicep  gdpr_vnet.bicep
src/gdpr_shift_left_mcp/tools/: __init__.py  analyzer.py  articles.py  ast_analyzer.py  definitions.py  dpia.py  dsr.py  retention.py  role_classifier.py  ropa.py
tests/: test_ast_analyzer.py  test_bicep_templates.py  test_data_loader.py  test_data_loader_extended.py  test_enhanced_analyzers.py  test_mcp_tools.py  test_readme_validation.py  test_risk_patterns.py  test_role_classifier.py  test_tools_extended.py
tests/evaluator/: __init__.py  checks.py  checks_adversarial.py  checks_comprehensive.py  checks_readme.py  judge.py  run_judges.py
