[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdpr-shift-left-mcp"
version = "0.1.3"
description = "GDPR Shift-Left Compliance MCP Server — Azure-first GDPR guidance, code review, and audit tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GDPR Shift Left MCP Contributors"}
]
keywords = ["gdpr", "compliance", "mcp", "azure", "shift-left", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[project.scripts]
gdpr-shift-left-mcp = "gdpr_shift_left_mcp:main"

[project.urls]
Homepage = "https://github.com/KevinRabun/GDPRShiftLeftMCP"
Documentation = "https://github.com/KevinRabun/GDPRShiftLeftMCP#readme"
Repository = "https://github.com/KevinRabun/GDPRShiftLeftMCP"
Issues = "https://github.com/KevinRabun/GDPRShiftLeftMCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gdpr_shift_left_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
